# ufs-s2s-model

./: .gitignore  .gitmodules  CICE  CICE_CAP  CMakeLists.txt  MOM6.README  README.md  build.sh  build_cmake.sh  cmeps_files.cmake  coupledFV3_CCPP_MOM6_CICE.appBuilder  coupledFV3_CCPP_MOM6_CICE_CMEPS.appBuilder  coupledFV3_CCPP_MOM6_CICE_CMEPS_debug.appBuilder  coupledFV3_CCPP_MOM6_CICE_WW3.appBuilder  coupledFV3_CCPP_MOM6_CICE_WW3_CMEPS.appBuilder  coupledFV3_CCPP_MOM6_CICE_WW3_repro.appBuilder  coupledFV3_CCPP_MOM6_CICE_debug.appBuilder  coupledFV3_CCPP_MOM6_CICE_repro.appBuilder  coupledFV3_MOM6_CICE.appBuilder  coupledFV3_MOM6_CICE6_CMEPS.appBuilder  coupledFV3_MOM6_CICE_CMEPS.appBuilder  coupledFV3_MOM6_CICE_CMEPS_debug.appBuilder  coupledFV3_MOM6_CICE_NEMS.appBuilder  coupledFV3_MOM6_CICE_NEMS_debug.appBuilder  coupledFV3_MOM6_CICE_WW3.appBuilder  coupledFV3_MOM6_CICE_WW3_CMEPS.appBuilder  coupledFV3_MOM6_CICE_WW3_repro.appBuilder  coupledFV3_MOM6_CICE_debug.appBuilder  coupledFV3_MOM6_CICE_repro.appBuilder  create_baseline.py  fetch_MOM6.sh  fms_files.cmake  notes  standaloneFV3.appBuilder  ww3_multi.inp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CICE-interface/: CMakeLists.txt
CICE-interface/cmake/: compiler_flags_Clang_C.cmake  compiler_flags_GNU_C.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_Fortran.cmake
CMEPS-interface/: CMakeLists.txt  cmeps_files.cmake
CMEPS-interface/cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake
MOM6/: compile.sh
MOM6-interface/: CMakeLists.txt  README.md  clean.sh  compile.sh  makefile.nuopc  mom6_files.cmake
MOM6-interface/cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake
cmake/: FindESMF.cmake  FindPIO.cmake  GNU.cmake  Intel.cmake  PGI.cmake
compsets/: all.input  all_ccpp.input  benchmark2_cold.input  benchmark2_warm.input  benchmarkRT_ccpp_cold.input  benchmarkRT_ccpp_warm.input  benchmarkRT_cold.input  benchmarkRT_warm.input  benchmarkWAV_ccpp_cold.input  benchmarkWAV_ccpp_warm.input  benchmarkWAV_cold.input  benchmarkWAV_warm.input  benchmark_cmeps.input  benchmark_cold.input  benchmark_cold_ccpp.input  benchmark_restart.input  benchmark_warm.input  benchmark_warm_ccpp.input  bm3p5_35d_ccpp.input  bm3p5_cold_ccpp.input  cpld_fv3_ccpp_mom6_cice_2d_atm_flux.input  cpld_fv3_ccpp_mom6_cice_cold_atm_flux.input  cpld_fv3_mom6_cice_1d_atm_flux.input  cpld_fv3_mom6_cice_2d_atm_flux.input  cpld_fv3_mom6_cice_cold_atm_flux.input  cpld_fv3_mom6_cice_restart_atm_flux.input  datesuite_cold.input  datesuite_cold_ccpp.input  datesuite_cold_cmeps.input  datesuite_warm.input  datesuite_warm_ccpp.input  datesuite_warm_cmeps.input  fv3.input  fv3mom6cice.input  fv3mom6cice5.input  fv3mom6cice5_ccpp.input  fv3mom6cice5cmeps.input  gaea.input  hera.input  jet.input  (+5 more)
conf/: before_components.mk  configure.fv3.cheyenne.intel  configure.fv3.gaea.intel  configure.fv3.hera.intel  configure.fv3.jet.intel  configure.fv3.orion.intel  configure.fv3.stampede.intel  configure.fv3.theia  configure.fv3.wcoss_dell_p3  configure.fv3_coupled.cheyenne.intel  configure.fv3_coupled.cheyenne.intel-impi  configure.fv3_coupled.gaea  configure.fv3_coupled.gaea.intel  configure.fv3_coupled.hera  configure.fv3_coupled.hera.intel  configure.fv3_coupled.orion.intel  configure.fv3_coupled.theia  configure.fv3_coupled.wcoss_cray  configure.fv3_coupled.wcoss_dell_p3  configure.fv3_coupled.wcoss_phase1  configure.fv3_coupled.wcoss_phase2
log/report-hera.intel-log/: rtreport.txt
log/report-theia-log/: rtreport.txt
log/report-wcoss.cray-log/: rtreport.txt
log/report-wcoss.phase1-log/: rtreport.txt
log/report-wcoss.phase2-log/: rtreport.txt
modulefiles/: wcoss.phase1
modulefiles/cheyenne.intel/: fv3_coupled  fv3_coupled_debug
modulefiles/gaea.intel/: fv3_coupled
modulefiles/hera.intel/: fv3  fv3_coupled  fv3_coupled_debug  fv3_debug
modulefiles/orion.intel/: fv3  fv3_coupled  fv3_coupled_debug  fv3_debug  fv3_stack
modulefiles/stampede.intel/: fv3
modulefiles/theia/: fv3  fv3_coupled
modulefiles/wcoss_cray/: fv3_coupled
modulefiles/wcoss_dell_p3/: fv3  fv3_coupled  fv3_coupled_debug  fv3_debug
modulefiles/wcoss_phase2/: fv3  fv3_coupled
parm/: MOM_input_template  MOM_input_template_025  MOM_input_template_050  MOM_input_template_100  MOM_input_template_wave  MOM_input_wave_template  MOM_input_wave_template_025  MOM_input_wave_template_050  REGTEST-FINGERPRINT.md  ccpp_control.nml.IN  diag_table_template  fd.yaml  fd_nems.yaml  gfdlmp.nml.IN  ice_in_template  ice_in_template_debug  input.benchmark.nml.IN  input.benchmark_ccpp.nml.IN  input.bm1.nml.IN  input.bm2.nml.IN  input.gefs.nml.IN  input.gefsnostoch.nml.IN  input.mom6.nml.IN  input.mom6_ccpp.nml.IN  input.nml.IN  model_configure.IN  nems.configure.cmeps.med_atm_ocn_ice.IN  nems.configure.cmeps.medcold_atm_ocn_ice.IN  nems.configure.med_atm_ocn_ice.IN  nems.configure.med_atm_ocn_ice_wav.IN  nems.configure.medcmeps_atm_ocn_ice.IN  nems.configure.medcmeps_atm_ocn_ice_wav.IN  nems.configure.medcold_atm_ocn_ice.IN  nems.configure.medcold_atm_ocn_ice_wav.IN  nems.configure.medcoldcmeps_atm_ocn_ice.IN  nems.configure.medcoldcmeps_atm_ocn_ice_1step.IN  nems.configure.medcoldcmeps_atm_ocn_ice_wav.IN
tests/: .gitignore  compile.sh  compile_cmake.sh  default_vars.sh  detect_machine.sh  edit_inputs.sh  fail_test  output  rt.conf  rt.conf.cmeps  rt.conf.restart  rt.conf_coldonly  rt.sh  rt_35d.conf  rt_35d_cmeps.conf  rt_35d_nems.conf  rt_35d_noww3_cmeps.conf  rt_35d_wave.conf  rt_fv3.sh  rt_s2s.conf  rt_utils.sh  run_test.sh
tests/fv3_conf/: cpld_fv3_ccpp_384_mom6_cice_1d_bmark_rt_run.IN  cpld_fv3_ccpp_384_mom6_cice_2d_atm_flux_run.IN  cpld_fv3_ccpp_384_mom6_cice_cold_atm_flux_run.IN  cpld_fv3_ccpp_384_mom6_cice_cold_bmark_rt_run.IN  cpld_lowres.IN  (+21 more)
tests_cmake/: .gitignore  compile.sh  compile_cmake.sh  default_vars.sh  fail_test  modules.fcst_0  rt.sh  rt_35d_cmeps.conf  rt_35d_noww3_cmeps.conf  rt_s2s.conf  rt_utils.sh  run_test.sh
(+132 files in other folders)
